@@ -21,7 +21,7 @@
 #  time spent here.
 from collections import namedtuple
 
-Group = namedtuple("Group", "p p4 p6 digits bytes firstp lastp firstp4 lastp4 firstp6 lastp6 rho delete")
+Group = namedtuple("Group", "p p4 p6 digits bytes firstp lastp firstp4 lastp4 firstp6 lastp6")
 """Group properties"""
 
 groups = {
@@ -36,9 +36,7 @@ groups = {
         "00_1000000000000",
         "Y._0d5c34bc54504",
         "1000000000000000",
-        "wzMzLecAryfbdoW.",
-        "---------------0",
-        "--------........",
+        "wzMzLecAryfbdoW."
     ),
     32: Group(
         4294967291,
@@ -51,9 +49,7 @@ groups = {
         "00_10000000000000000000000000000",
         ".._67200000b0efffff59000000cefff",
         "10000000000000000000000000000000",
-        "oG300obK..f2A000gp...nn000wU....",
-        "-------------------------------0",
-        "----------------................",
+        "oG300obK..f2A000gp...nn000wU...."
     ),
     40: Group(
         1099511627689,
@@ -66,9 +62,7 @@ groups = {
         "00_1000000000000000000000000000000000000",
         ".._87c2a630003eec7dffff561b0000004aeffff",
         "1000000000000000000000000000000000000000",
-        "g-8KOjCQREq2Vz8VTc30gLMd..vvX6000ov.....",
-        "---------------------------------------0",
-        "--------------------....................",
+        "g-8KOjCQREq2Vz8VTc30gLMd..vvX6000ov....."
     ),
     64: Group(
         18446744073709551557,
@@ -81,9 +75,7 @@ groups = {
         "00_1000000000000000000000000000000000000000000000000000000000000",
         ".._ca5e8b00000000003f673fffffffffff591500000000000041fffffffffff",
         "1000000000000000000000000000000000000000000000000000000000000000",
-        "owLrhD0000wO2Z50.....z08lH000000MelM......vZb30000000UF.........",
-        "---------------------------------------------------------------0",
-        "--------------------------------................................",
+        "owLrhD0000wO2Z50.....z08lH000000MelM......vZb30000000UF........."
     ),
 }
 UT16_4, UT32_4, UT40_4, UT64_4 = groups.values()
