@@ -1,4 +1,5 @@
 2.211204
+    Replace weak hash key2id by strong implicit hashing of key.encode()
     Add rgb/ansi to show id, e.g., in html pages
 
 2.211202
